--- a/package.json
+++ b/package.json
@@ -1,33 +1,24 @@
 {
-  "name": "reactnativeexpo",
+  "name": "my-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.27",
+    "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
+    "expo": "~52.0.28",
     "expo-status-bar": "~2.0.1",
-    "expo-three": "^8.0.0",
-    "react": "^18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "^0.76.6",
-    "react-native-gesture-handler": "^2.22.0",
-    "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
-    "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "three": "^0.172.0"
+    "react": "18.3.1",
+    "react-native": "0.76.6",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
