--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-native-firebase/app": "^21.10.0",
+    "@react-native-firebase/auth": "^21.10.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.27",
+    "expo-build-properties": "~0.13.2",
+    "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
-    "expo-three": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.6",
