--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "axios": "^1.7.9",
     "expo": "~52.0.28",
     "expo-build-properties": "^0.13.2",
+    "expo-camera": "^16.0.18",
+    "expo-file-system": "^18.0.11",
+    "expo-image-picker": "^16.0.6",
     "expo-router": "^4.0.18",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
