--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/auth": "^21.12.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
@@ -16,6 +17,7 @@
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "cloudinary-react-native": "^1.0.1",
     "expo": "~52.0.28",
     "expo-build-properties": "^0.13.2",
     "expo-camera": "^16.0.18",
@@ -25,6 +27,9 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-paper": "^5.11.1",
+    "react-native-table-component": "^1.2.2",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
