--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://jhonludwiggayapa:XB3E9prtCVtGO8YT@cluster0.m9nos.mongodb.net/R&L?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://rlreactnative:OK1PSHQdMjKRRv0z@cluster0.vwk18.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret_key_here
