--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,15 +18,15 @@
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "cloudinary-react-native": "^1.0.1",
-    "expo": "~52.0.28",
+    "expo": "^52.0.41",
     "expo-build-properties": "^0.13.2",
     "expo-camera": "^16.0.18",
-    "expo-file-system": "^18.0.11",
+    "expo-file-system": "^18.0.12",
     "expo-image-picker": "^16.0.6",
-    "expo-router": "^4.0.18",
+    "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "^0.76.7",
     "react-native-paper": "^5.11.1",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.2.0",
