--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
     "babel-preset-expo": "^12.0.9",
     "react-native-dotenv": "^3.4.11"
   },
