--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
     "@expo/vector-icons": "^14.0.4",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/auth": "^21.12.0",
-    "@react-navigation/bottom-tabs": "^7.2.1",
-    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/bottom-tabs": "^7.3.3",
+    "@react-navigation/drawer": "^7.3.2",
+    "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
@@ -27,7 +28,11 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "^0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.11.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0"
