--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "expo-file-system": "^18.0.12",
     "expo-image-picker": "^16.0.6",
     "expo-router": "^4.0.19",
+    "expo-sqlite": "^15.1.3",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "^0.76.7",
